# esp-coredump

./: .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: dangerjs.yml  issue_comment.yml  new_issues.yml  new_prs.yml  release_pypi.yml
esp_coredump/: __init__.py  __main__.py  cli_ext.py  coredump.py  tools.py
esp_coredump/corefile/: __init__.py  _parse_soc_header.py  elf.py  gdb.py  loader.py  riscv.py  xtensa.py
esp_coredump/corefile/soc_headers/: esp32.py  esp32c2.py  esp32c3.py  esp32c5.py  esp32c6.py  esp32c61.py  esp32h2.py  esp32h21.py  esp32h4.py  esp32p4.py  esp32s2.py  esp32s3.py  esp32s31.py
esp_coredump/scripts/: __init__.py  espcoredump.py  run_tests.py
tests/: README.md  build_espcoredump.sh  test_espcoredump.py
tests/esp32/: coredump.b64  coredump_bin.b64  expected_output  expected_output_bin
tests/esp32c2/: expected_output
tests/esp32c3/: coredump.b64  coredump_bin.b64  expected_output  expected_output_bin
tests/esp32c6/: coredump.b64  expected_output
tests/esp32p4/: coredump.b64  expected_output
tests/esp32s2/: expected_output
tests/esp32s3/: coredump_bin.b64  expected_output  expected_output_bin
tests/rom_tests/esp32/: expected_output
tests/rom_tests/esp32c2/: coredump.b64  expected_output
tests/rom_tests/esp32c3/: coredump.b64  expected_output
tests/rom_tests/esp32s2/: coredump.b64  expected_output
tests/rom_tests/esp32s3/: coredump.b64  expected_output
tests/test_apps/: README.md  build_espcoredump.sh  sdkconfig.defaults.esp32s3
tests/test_apps/built_apps/: esp32.elf  esp32_bin.elf  esp32c3.elf  esp32c3_bin.elf  esp32c6.elf  esp32p4.elf  esp32s3_bin.elf
tests/test_apps/built_apps/rom_tests/: esp32.elf
tests/test_apps/main/: CMakeLists.txt  test_core_dump.c
tests/test_apps/rom_tests/main/: test_core_dump.c
