[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-coredump"
authors = [{name = "Espressif Systems"}]
license = {file = "LICENSE"}
description = "Generate core dumps on unrecoverable software errors"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: Software Development :: Embedded Systems",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.7"
dynamic = ['version']
dependencies = [
    "construct~=2.10",
    "pygdbmi>=0.9.0.2",
    "esptool",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/espressif/esp-coredump"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "commitizen",
]

[project.scripts]
esp-coredump = "esp_coredump.scripts.espcoredump:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "esp_coredump.__version__"}

[tool.commitizen]
version = "1.10.0"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_merge_prerelease = true
annotated_tag = true
changelog_start_rev = "v1.4.2"
bump_message = "change: Update version to $new_version"
version_files = [
    "esp_coredump/__init__.py:__version__"
]
change_type_order = [
    "BREAKING CHANGE",
    "New Features",
    "Bug Fixes",
    "Code Refactoring",
    "Performance Improvements"
]

[tool.commitizen.change_type_map]
feat = "New Features"
fix = "Bug Fixes"
refactor = "Code Refactoring"
perf = "Performance Improvements"

[tool.mypy]
    disallow_incomplete_defs = false # Disallows defining functions with incomplete type annotations
    disallow_untyped_defs    = false # Disallows defining functions without type annotations or with incomplete type annotations
    ignore_missing_imports   = true  # Suppress error messages about imports that cannot be resolved
    python_version           = "3.9" # Specifies the Python version used to parse and check the target program
    warn_no_return           = true  # Shows errors for missing return statements on some execution paths
    warn_return_any          = true  # Shows a warning when returning a value with type Any from a function declared with a non- Any return type
