[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-coredump"
authors = [{name = "Espressif Systems"}]
license = {text = "Apache 2.0"}
description = "Generate core dumps on unrecoverable software errors"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: Software Development :: Embedded Systems",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.7"
dynamic = ['version']
dependencies = [
    "construct~=2.10",
    "pygdbmi>=0.9.0.2",
    "esptool",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/espressif/esp-coredump"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "commitizen",
    "czespressif>=1.3.1",
]
test = [
    "coverage[toml]",
    "pytest",
]

[project.scripts]
esp-coredump = "esp_coredump.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "esp_coredump.__version__"}

[tool.commitizen]
name = "czespressif"
version = "1.16.0"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_merge_prerelease = true
annotated_tag = true
changelog_start_rev = "v1.4.2"
bump_message = "change: Update version to $new_version"
version_files = [
    "esp_coredump/__init__.py:__version__"
]

[tool.mypy]
    disallow_incomplete_defs = false # Disallows defining functions with incomplete type annotations
    disallow_untyped_defs    = false # Disallows defining functions without type annotations or with incomplete type annotations
    ignore_missing_imports   = true  # Suppress error messages about imports that cannot be resolved
    python_version           = "3.9" # Specifies the Python version used to parse and check the target program
    warn_no_return           = true  # Shows errors for missing return statements on some execution paths
    warn_return_any          = true  # Shows a warning when returning a value with type Any from a function declared with a non- Any return type

[tool.coverage.run]
    parallel = true
    source = ["esp_coredump/"]
[tool.coverage.report]
    omit = ["esp_coredump/corefile/_parse_soc_header.py"]  # ignore helper script
    exclude_also = [
        "def __repr__",
        "def _type_str",
        "@(abc\\.)?abstractmethod",
        "raise NotImplementedError",
    ]

[tool.pytest.ini_options]
    addopts = "-vs"

[tool.ruff]
    # https://docs.astral.sh/ruff/settings/
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".eggs",
        ".git",
        "__pycache__"
    ]

    line-length = 160
    target-version = "py37"

[tool.ruff.lint]
    # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
    # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
    # McCabe complexity (`C901`) by default.
    # Also enable pyupgrade (`UP`) rules for Python modernization, except UP032
    # UP032: Use f-string instead of .format() call - excluded to avoid automatic conversion
    select = ['E', 'F', 'W', 'UP', 'I']
    ignore = ["UP032"]

    # Allow fix for all enabled rules (when `--fix`) is provided.
    fixable = ["ALL"]
    unfixable = []

    # Allow unused variables when underscore-prefixed.
    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
    # tests often manipulate sys.path before importing the main tools, so ignore import order violations
    "tests/*.py" = ["E402"]

[tool.ruff.format]
    quote-style = "single"
    indent-style = "space"
    docstring-code-format = true
